s3.tf
# data "aws_iam_policy_document" "s3_assets" {
#   statement {
#     actions   = ["s3:GetObject"]
#     resources = ["${module.s3_bucket.s3_bucket_arn}/*"]

#     principals {
#       type        = "Service"
#       identifiers = ["cloudfront.amazonaws.com"]
#     }

#     condition {
#       test     = "StringEquals"
#       variable = "AWS:SourceArn"
#       values   = [aws_cloudfront_distribution.this.arn]
#     }
#   }
# }

# resource "aws_s3_bucket_policy" "s3_assets" {
#   bucket = module.s3_bucket.s3_bucket_id
#   policy = data.aws_iam_policy_document.s3_assets.json
# }

# resource "aws_vpc_endpoint" "s3_gw_endpoint" {
#   vpc_id          = module.vpc.vpc_id
#   service_name    = "com.amazonaws.${var.aws_region}.s3"
#   route_table_ids = module.vpc.private_route_table_ids

#   tags = var.tags
# }
